# envsbot

./: .gitignore  README.md  bluebot.py  bot.py  command.py  config_sample.json  config_sample.py  ednabot.py  envsbot.py  idlerpg_world.json  logging_setup.py  plugin_manager.py  pyproject.toml  requirements.txt
database/: manager.py  reminders.py  users.py
plugins/: __init__.py  _reg_profile.py  _test.py  help.py  idlerpg.py  information.py  plugins.py  profile.py  reg_profile.py  reload.py  reminder.py  rooms.py  rss.py  set_status.py  setstatus.py  show_status.py  showstatus.py  status.py  tools.py  urlcheck.py  users.py  weather_time.py
plugins/idlerpg_src/: character.py  events.py  fantasy_names.py  info.py  items.py  names_lists.py  tools.py  world.py
tests/: conftest.py  test_bot.py  test_integration.py
tests/DB/: test_users_persistence.py
tests/bot_core/: test_bot.py  test_permissions.py  test_reply.py
tests/commands/: test_commands_crash.py  test_commands_system.py
tests/integration/: test_integration.py
tests/plugins/: test_plugin_integrity.py  test_plugin_isolation.py  test_plugin_manager_property.py  test_plugin_manager_unit.py  test_plugin_reload.py  test_plugin_reload_integitry.py
utils/: __init__.py  command.py  config.py  plugin_manager.py  presence_manager.py
